--- a/Flask API/templates/chart0.html
+++ b/Flask API/templates/chart0.html
@@ -21,6 +21,8 @@
   <!-- Link to customized stylesheet -->
   <link rel="stylesheet" href="../static/assets/css/style_chart0.css">
 </head>
+
+</style>
 <body>
 
 
@@ -44,7 +46,7 @@
           <a class="dropdown-item" href="chart1.html">Gender & Body Composition</a>
           <a class="dropdown-item" href="chart2.html">Medals VS GDP</a>
           <a class="dropdown-item" href="chart3.html">Medals World View - Seasons</a>
-          <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a>
+          <!-- <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a> -->
         </div>
       <li class="nav-item">
         <a class="nav-link" href="analysis.html">Analysis</a>
@@ -86,7 +88,8 @@
 <!-- Input code here for visualizations -->
 <!--------------------------><!-------------------------->
 <!--------------------------><!-------------------------->
-  <div class="container chart my-5">
+<!--   <div class="container chart my-5"> -->
+  <div class="container chart ml-5" style="margin-left: 30px">
     <div class = 'barChartRace'>
         <!-- Bar Chart Race will be appended here*/ -->
     </div>
@@ -94,14 +97,12 @@
     
     <!-- Replay button -->
   <div class = 'container'>
-    <div class = 'row col-md-9'>
+    <div class = 'row col-md-9 mb-5'>
       <button class = "btn btn-info mb-2 ml-5" onclick = "location.reload();">Replay</button>
     </div>
   </div>
 
-  <div class="container  mb-5">
-    <p class="text-muted ml-5">Source: <a href="https://bl.ocks.org/jrzief/raw/70f1f8a5d066a286da3a1e699823470f/">Bl.ocks.org</a></p>
-  </div>
+
 
     <!-- Analysis -->
   <div class = 'row'><!-- 
@@ -122,7 +123,7 @@
 
   <div class = 'row'>
 <!--     <div class="col-md-8"> -->
-      <div class = 'container shadow card my-5' >
+      <div class = 'container shadow card mt-5' >
         <article>
           <h4 class = 'text-primary mt-3'>
             Since when have the Summer and Winter games no longer been held in the same year?
@@ -137,14 +138,12 @@
               of an Olympiad and the Winter Games held in the third year.</p>
         </article>
       </div>
+
+       <div class="container mb-5">
+        <p class="text-muted"><small>Source: <a href="https://bl.ocks.org/jrzief/raw/70f1f8a5d066a286da3a1e699823470f/">Bl.ocks.org</a></small></p>
+  </div>
     </div>
   </div>
-
-
-
-
-
-
 
 
 <!-- Footer -->
