--- a/Flask-API/templates/chart3.html
+++ b/Flask-API/templates/chart3.html
@@ -13,15 +13,21 @@
   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/lux/bootstrap.min.css" rel="stylesheet" integrity="sha384-smnSwzHqW1zKbeuSMsAM/fMQpkk7HY11LuHiwT8snL/W2QBoZtVCT4H5x1CEcJCs" crossorigin="anonymous">
   <!-- Link to D3 -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
-<!-- Link to Plotly -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+ <!-- Leaflet JS & CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+  integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+  crossorigin=""/>
+  
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+  integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+  crossorigin=""></script>
 
 <!-- Link to customized stylesheet -->
-<!--   <link rel="stylesheet" href="../static/assets/css/style_data.css"> -->
+  <link rel="stylesheet" href="../static/assets/css/style_chart3.css">
 
-  <style>
-
-/* Fixed table header
+ <style>
+  /* Fixed table header
 css from https://adrianroselli.com/2020/01/fixed-table-headers.html */
 th {
     position: -webkit-sticky;
@@ -30,32 +36,7 @@ th {
     z-index: 2;
     background-color: #C0C0C0; 
 }
-
-/*custom scrollbar visbility in data html*/
-/*css from https://mdbootstrap.com/docs/jquery/tables/scroll/*/
-.my-custom-scrollbar {
-  position: relative;
-  height: 1000px;
-  overflow: auto;
-  width: 1200px;
-}
-.table-wrapper-scroll-y {
-  display: block;
-}
-
-/*Scrollbar edit in data html table
-css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
-.scrollbar-primary::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-  background-color: #95989b; 
-}
-.scrollbar-primary::-webkit-scrollbar {
-  width: 12px;
-  background-color: #e3e4e6; 
-}
-
-  </style>
+ </style>
 
 </head>
 <body>
@@ -63,7 +44,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand mt-3" href="index.html"><h2 class="text-dark ml-2">OLYMPICS</h2></a>
+  <a class="navbar-brand mt-3" href="../../index.html"><h2 class="text-dark ml-2">OLYMPICS</h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -100,7 +81,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
     <div class= "container">
       <div class="row">
           <div class="col-md-12">  
-            <img class="col-md-12" id="photo" src="../static/assets/images/images_data/dive_into_data.png"/>   
+            <img class="col-md-12" id="photo" src="../static/assets/images/images_home/map_chart.jpeg"/>   
           </div>
       </div>
     </div>  
@@ -108,73 +89,91 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 <hr>
 <!--Insert title and subtitle here --> 
 <!--------------------------><!-------------------------->
-  <div class= "container">
-    <section id="header" class="text-center">
-        <h1 class="mb-5 display-3 content">Take a Deep dive into Data!</h1>
-<!--         <h2 class="mb-5 content">subtitle here</h2> -->
-    </section>
-  </div>
+<div class= "container">
+  
+  <section id="header" class="text-center">
+      <h1 class="mb-5 display-3 content">Medals World View</h1>
+      <h2 class="mb-5 content">by Seasons</h2>
+  </section>
+</div>
 
 
 <!-- Input code here for visualizations -->
 <!--------------------------><!-------------------------->
 <!--------------------------><!-------------------------->
-
-    <div class="container">
-      <div class="row">
-
-<!--         <div class="col-md-1"> </div> -->
-
-            <div class="col-md-2 mt-5" >
-              <aside class="filters">
-                <div class="panel panel-default">
-                  <div class="panel-heading mb-3"><h5>Filter Search</h5></div>
-                  <div class="panel-body">
-                    <form id = 'form'>
-                      <div class="form-group">
-                        <ul class="list-group" id="filters">
-                        </ul>
-                      </div>
-                    </form>
+  <div class="container chart">
+    <div class = 'chart3'>
+        <!-- Your Chart will be appended here*/ -->
+    </div>
+  </div>
+    
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2 mt-5">
+        <aside class="filters">
+          <div class="panel panel-default">
+            <div class="panel-heading mb-3"><h5>Filter Search</h5></div>
+              <div class="panel-body">
+                <form>
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Olympic Type</label>
+                        <input class="form-control" id="type" type="text" placeholder="summer">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter Year</label>
+                        <input class="form-control" id="year" type="text" placeholder=2016>
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="state">Enter Medal</label>
+                        <input class="form-control" id="gold" type="text" placeholder="gold">
+                      </li>
+                    </ul>
                   </div>
-                  <div class="panel-footer">
-                    <button class="btn btn-info" onclick="location.reload();">Clear Filters</button>
-                  </div>
-                </div>
-              </aside>
+                </form>
+                  <button id="filter-btn" type="button" class="btn btn-info">Filter Table</button>
+              </div>
             </div>
+          </div>
+        </aside>
 
-<!--         <div class="col-md-1"> </div> -->
 
-        <div class="col-md-10 mt-5">
-          <div id="table-area" class="table-responsive table-wrapper-scroll-y my-custom-scrollbar scrollbar-primary">
-            <table id="ufo-table" class="table table-bordered table-striped table-hover table-condensed">
-              <thead id="thtable">
-                <tr>
+<!--       <div class="col-md-1"> </div> -->
+
+        <!-- Table start -->
+      <div class="col-md-10 mt-5">
+        <div id="table-area" class ="table-responsive table-wrapper-scroll-y my-custom-scrollbar scrollbar-primary">
+          <table class="table table-bordered table-striped table-hover table-condensed">
+            <thead id="thtable">
+              <tr>
+                <th class="table-head"><h6>Type</h6></th>
                 <th class="table-head"><h6>Year</h6></th>
-                <th class="table-head"><h6>Season</h6></th>
-                <th class="table-head"><h6>Nation</h6></th>
-                <th class="table-head"><h6>Medals</h6></th>
+                <th class="table-head"><h6>Region</h6></th>
+                <th class="table-head"><h6>Latitude</h6></th>
+                <th class="table-head"><h6>Longitude</h6></th>
                 <th class="table-head"><h6>Gold</h6></th>
                 <th class="table-head"><h6>Silver</h6></th>
                 <th class="table-head"><h6>Bronze</h6></th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
+      </div>
 
-        <div class="col-md-1 mb-5"> </div>
-
+      <!-- Table end -->
       </div>
     </div>
 
-
-
-
-
-
+<!-- Leaflet map -->
+    <div class="container my-5">
+<!--       <div class="row margin-top-50">
+        <div class="col-md-12"> -->
+          <div id="map" style="width: 1000px; height: 500px; left:10%;" ></div>
+        </div>
+      </div>
+    </div>
 
 
 <!-- Footer -->
@@ -193,7 +192,10 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-  <script type="text/javascript" src="../static/js/app_data_page.js"> </script>
+  <!-- add link to your javascript file -->
+  <script type="text/javascript" src="../static/js/config.js"></script>
+  <script src="../static/js/data_chart3.js"></script>
+  <script type="text/javascript" src="../static/js/app_chart3.js"></script>
 
 </body>
 </html>
