--- a/Flask-API/templates/chart4.html
+++ b/Flask-API/templates/chart4.html
@@ -11,25 +11,33 @@
     <script src="https://kit.fontawesome.com/2e362d4438.js" crossorigin="anonymous"></script>
   <!-- Bootstrap 4 Link -->
   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/lux/bootstrap.min.css" rel="stylesheet" integrity="sha384-smnSwzHqW1zKbeuSMsAM/fMQpkk7HY11LuHiwT8snL/W2QBoZtVCT4H5x1CEcJCs" crossorigin="anonymous">
-
-
   <!-- Link to D3 -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
 <!-- Link to Plotly -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-  <!-- Link to customized stylesheet -->
-  <link rel="stylesheet" href="../static/assets/css/style_chart0.css">
+
+  <!-- Leaflet JS & CSS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+crossorigin=""/>
+<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+crossorigin=""></script>
+
+
+<!-- Leaflet-Choropleth JavaScript -->
+<script type="text/javascript" src="../static/js/choropleth.js"></script>
+
+<!-- Link to customized stylesheet -->
+  <link rel="stylesheet" href="../static/assets/css/style_chart4.css">
+
 </head>
-
-</style>
 <body>
-
-
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand mt-3" href="index.html"><h2 class="text-dark ml-2">OLYMPICS</h2></a>
+  <a class="navbar-brand mt-3" href="../../index.html"><h2 class="text-dark ml-2">OLYMPICS</h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -46,7 +54,7 @@
           <a class="dropdown-item" href="chart1.html">Gender & Body Composition</a>
           <a class="dropdown-item" href="chart2.html">Medals VS GDP</a>
           <a class="dropdown-item" href="chart3.html">Medals World View - Seasons</a>
-          <!-- <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a> -->
+          <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a>
         </div>
       <li class="nav-item">
         <a class="nav-link" href="analysis.html">Analysis</a>
@@ -66,7 +74,7 @@
     <div class= "container">
       <div class="row">
           <div class="col-md-12">  
-            <img class="col-md-12" id="photo" src="../static/assets/images/images_home/racing_bar_chart.png"/>   
+            <img class="col-md-12" id="photo" src="../static/assets/images/images_home/map_chart.jpeg"/>   
           </div>
       </div>
     </div>  
@@ -74,76 +82,89 @@
 <hr>
 <!--Insert title and subtitle here --> 
 <!--------------------------><!-------------------------->
-<div class= "container">
-  
-  <section id="header" class="text-center">
-      <h1 class="mb-5 display-3 content">Medals Timeline</h1>
-<!--       <h2 class="mb-5 content">Subtitle here</h2> -->
-  </section>
-</div>
-
-
+  <div class= "container">
+    <section id="header" class="text-center">
+        <h1 class="mb-5 display-3 content">Medals World View</h1>
+        <h2 class="mb-5 content">by Sport</h2>
+    </section>
+  </div>
 
 
 <!-- Input code here for visualizations -->
 <!--------------------------><!-------------------------->
 <!--------------------------><!-------------------------->
-<!--   <div class="container chart my-5"> -->
-  <div class="container chart ml-5" style="margin-left: 30px">
-    <div class = 'barChartRace'>
-        <!-- Bar Chart Race will be appended here*/ -->
+
+
+  <div class="container">
+    <div class="row col-sm-12">
+      <h2 class="subject mt-5 mb-5">The map shows the top 10 countries that have won the most olympic medals for the selected sport</h2>
     </div>
   </div>
+
+  <div class="container">
+    <form>
+      <div class="form-row">
+        <div class="col-sm-4">
+          <label for="sport"><h4 class="text-info">Enter a sport</h4></label>
+        </div>
+        <div class="col-sm-4">
+          <input class="form-control" style="text-align: center" class="filter form-control" id="sport" type="text" placeholder="Athletics">
+        </div>
+        <div class="col-sm-4">
+          <button id="filter-btn" type="button" class="btn btn-info">Search Results</button>
+          </div>
+      </div>
+    </form>
+  </div>
+
+
+
+
+    <!-- Choropleth Map -->
+    <div id = 'map'>
+      <!-- Map will be appended here*/ -->
+    </div>
+
+    <br>
+    <br>
+    <hr>
     
-    <!-- Replay button -->
-  <div class = 'container'>
-    <div class = 'row col-md-9 mb-5'>
-      <button class = "btn btn-info mb-2 ml-5" onclick = "location.reload();">Replay</button>
+  <div class="container">
+    <div class="row col-sm-12">
+      <h2 class="subject">The bar chart shows the top sports for which the selected country has won most Olympic Medals</h2>
     </div>
   </div>
 
-
-
-    <!-- Analysis -->
-  <div class = 'row'><!-- 
-    <div class="col-md-8"> -->
-      <div class = 'container shadow card'>
-        <article>
-          <h3 class = 'text-primary mt-3'>2020 Summer Olympics</h3>
-          <p class="text-info mb-3">
-            2020 Summer Olympics, originally scheduled to be held in Tokyo, Japan 
-            between 24 July and 9 August 2020, were rescheduled for 23 July to 8 August 2021 
-            as a result of the COVID-19 pandemic. The Games of the XXXII Olympiad will keep 
-            the name <strong class = "text-warning">Tokyo 2020</strong> for marketing and branding purposes despite being held in 2021.
-          </p>
-        </article>
-      </div>
+    <div class="container">
+      <form>
+        <div class="form-row">
+          <div class="col-sm-4">
+            <label for="sport"><h4 class="text-info">Enter a Country</h4></label>
+          </div>
+          <div class="col-sm-4">
+            <input class="form-control" style="text-align: center" class="filter form-control" id="country_name" type="text" placeholder="USA">
+          </div>
+          <div class="col-sm-4">
+           <button id="filter-btn-country" type="button" class="btn btn-info">Search Results</button>
+          </div>
+        </div>
+      </form>
     </div>
-  </div>
 
-  <div class = 'row'>
-<!--     <div class="col-md-8"> -->
-      <div class = 'container shadow card mt-5' >
-        <article>
-          <h4 class = 'text-primary mt-3'>
-            Since when have the Summer and Winter games no longer been held in the same year?
-          </h4>
-            <p class="text-info">At its 1986 Session in Lausanne, the IOC decided to introduce this change. 
-              From 1924 to 1992, the Summer and Winter Games were each held in the same year, every four years. 
-              This four years period is called the "Olympiad". </p>
-              
-            <p class="text-info">The last Summer and Winter Games held in the same 
-              year were in Barcelona (Summer) and Albertville (Winter) in 1992. Since then, the Summer and Winter 
-              Games are each still held every four years but the Summer Games are celebrated during the first year 
-              of an Olympiad and the Winter Games held in the third year.</p>
-        </article>
-      </div>
 
-       <div class="container mb-5">
-        <p class="text-muted"><small>Source: <a href="https://bl.ocks.org/jrzief/raw/70f1f8a5d066a286da3a1e699823470f/">Bl.ocks.org</a></small></p>
-  </div>
+
+
+
+    <!-- Bar Chart -->
+    <div class="mb-5" id="bar_chart_new">
+      <!-- Bar Chart will be appended here*/ -->
     </div>
-  </div>
+
+    <br>
+    <br>
+
+
+
 
 
 <!-- Footer -->
@@ -154,11 +175,7 @@
       Images: <a href="https://unsplash.com/">Unsplash &</a>  <a href="https://www.fool.com/amp/features/specials/2014/01/15/does-it-pay-to-host-the-olympics.aspx">Motley Fool, </a>
      Avatars: <a href="https://getavataaars.com/">GetAvataaars</a></p>
   </footer>
-  
 </div>
-
-
-
 
 
 <!-- JS, Popper.js, and jQuery -->
@@ -166,7 +183,11 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="../static/js/app_barChartRace.js"> </script>
+  <!-- chart.js script tag -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
+  <!-- add link to your javascript file -->
+  <script type="text/javascript" src="../static/js/sport_chart4.js"></script>
 
 </body>
 </html>
