--- a/Flask-API/templates/data.html
+++ b/Flask-API/templates/data.html
@@ -16,28 +16,54 @@
 <!-- Link to Plotly -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-
-  <!-- Leaflet JS & CSS -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-crossorigin=""/>
-<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-crossorigin=""></script>
-
-
-<!-- Leaflet-Choropleth JavaScript -->
-<script type="text/javascript" src="../static/js/choropleth.js"></script>
-
 <!-- Link to customized stylesheet -->
-  <link rel="stylesheet" href="../static/assets/css/style_chart4.css">
+<!--   <link rel="stylesheet" href="../static/assets/css/style_data.css"> -->
+
+  <style>
+
+/* Fixed table header
+css from https://adrianroselli.com/2020/01/fixed-table-headers.html */
+th {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background-color: #C0C0C0; 
+}
+
+/*custom scrollbar visbility in data html*/
+/*css from https://mdbootstrap.com/docs/jquery/tables/scroll/*/
+.my-custom-scrollbar {
+  position: relative;
+  height: 1000px;
+  overflow: auto;
+  width: 1200px;
+}
+.table-wrapper-scroll-y {
+  display: block;
+}
+
+/*Scrollbar edit in data html table
+css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
+.scrollbar-primary::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #95989b; 
+}
+.scrollbar-primary::-webkit-scrollbar {
+  width: 12px;
+  background-color: #e3e4e6; 
+}
+
+  </style>
 
 </head>
 <body>
 
+
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand mt-3" href="index.html"><h2 class="text-dark ml-2">OLYMPICS</h2></a>
+  <a class="navbar-brand mt-3" href="../../index.html"><h2 class="text-dark ml-2">OLYMPICS</h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -74,7 +100,7 @@ crossorigin=""></script>
     <div class= "container">
       <div class="row">
           <div class="col-md-12">  
-            <img class="col-md-12" id="photo" src="../static/assets/images/images_home/map_chart.jpeg"/>   
+            <img class="col-md-12" id="photo" src="../static/assets/images/images_data/dive_into_data.png"/>   
           </div>
       </div>
     </div>  
@@ -84,8 +110,8 @@ crossorigin=""></script>
 <!--------------------------><!-------------------------->
   <div class= "container">
     <section id="header" class="text-center">
-        <h1 class="mb-5 display-3 content">Medals World View</h1>
-        <h2 class="mb-5 content">by Sport</h2>
+        <h1 class="mb-5 display-3 content">Take a Deep dive into Data!</h1>
+<!--         <h2 class="mb-5 content">subtitle here</h2> -->
     </section>
   </div>
 
@@ -94,74 +120,58 @@ crossorigin=""></script>
 <!--------------------------><!-------------------------->
 <!--------------------------><!-------------------------->
 
-
-  <div class="container">
-    <div class="row col-sm-12">
-      <h2 class="subject mt-5 mb-5">The map shows the top 10 countries that have won the most olympic medals for the selected sport</h2>
-    </div>
-  </div>
-
-  <div class="container">
-    <form>
-      <div class="form-row">
-        <div class="col-sm-4">
-          <label for="sport"><h4 class="text-info">Enter a sport</h4></label>
-        </div>
-        <div class="col-sm-4">
-          <input class="form-control" style="text-align: center" class="filter form-control" id="sport" type="text" placeholder="Athletics">
-        </div>
-        <div class="col-sm-4">
-          <button id="filter-btn" type="button" class="btn btn-info">Search Results</button>
-          </div>
-      </div>
-    </form>
-  </div>
-
-
-
-
-    <!-- Choropleth Map -->
-    <div id = 'map'>
-      <!-- Map will be appended here*/ -->
-    </div>
-
-    <br>
-    <br>
-    <hr>
-    
-  <div class="container">
-    <div class="row col-sm-12">
-      <h2 class="subject">The bar chart shows the top sports for which the selected country has won most Olympic Medals</h2>
-    </div>
-  </div>
-
     <div class="container">
-      <form>
-        <div class="form-row">
-          <div class="col-sm-4">
-            <label for="sport"><h4 class="text-info">Enter a Country</h4></label>
-          </div>
-          <div class="col-sm-4">
-            <input class="form-control" style="text-align: center" class="filter form-control" id="country_name" type="text" placeholder="USA">
-          </div>
-          <div class="col-sm-4">
-           <button id="filter-btn-country" type="button" class="btn btn-info">Search Results</button>
+      <div class="row">
+
+<!--         <div class="col-md-1"> </div> -->
+
+            <div class="col-md-2 mt-5" >
+              <aside class="filters">
+                <div class="panel panel-default">
+                  <div class="panel-heading mb-3"><h5>Filter Search</h5></div>
+                  <div class="panel-body">
+                    <form id = 'form'>
+                      <div class="form-group">
+                        <ul class="list-group" id="filters">
+                        </ul>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="panel-footer">
+                    <button class="btn btn-info" onclick="location.reload();">Clear Filters</button>
+                  </div>
+                </div>
+              </aside>
+            </div>
+
+<!--         <div class="col-md-1"> </div> -->
+
+        <div class="col-md-10 mt-5">
+          <div id="table-area" class="table-responsive table-wrapper-scroll-y my-custom-scrollbar scrollbar-primary">
+            <table id="ufo-table" class="table table-bordered table-striped table-hover table-condensed">
+              <thead id="thtable">
+                <tr>
+                <th class="table-head"><h6>Year</h6></th>
+                <th class="table-head"><h6>Season</h6></th>
+                <th class="table-head"><h6>Nation</h6></th>
+                <th class="table-head"><h6>Medals</h6></th>
+                <th class="table-head"><h6>Gold</h6></th>
+                <th class="table-head"><h6>Silver</h6></th>
+                <th class="table-head"><h6>Bronze</h6></th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
           </div>
         </div>
-      </form>
+
+        <div class="col-md-1 mb-5"> </div>
+
+      </div>
     </div>
 
 
 
-
-
-    <!-- Bar Chart -->
-    <div class="mb-5" id="bar_chart_new">
-      <!-- Bar Chart will be appended here*/ -->
-    </div>
-
-    <br>
-    <br>
 
 
 
@@ -169,7 +179,7 @@ crossorigin=""></script>
 
 <!-- Footer -->
 
-<div class="container-fluid ml-5">
+<div class="container-fluid ml-5 mt-5">
   <footer>
     <p class="text-muted">Olympics Visualization and Prediction 2020.
       Images: <a href="https://unsplash.com/">Unsplash &</a>  <a href="https://www.fool.com/amp/features/specials/2014/01/15/does-it-pay-to-host-the-olympics.aspx">Motley Fool, </a>
@@ -183,11 +193,7 @@ crossorigin=""></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-  <!-- chart.js script tag -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-
-  <!-- add link to your javascript file -->
-  <script type="text/javascript" src="../static/js/sport_chart4.js"></script>
+  <script type="text/javascript" src="../static/js/app_data_page.js"> </script>
 
 </body>
 </html>
